chore: fix images, remove footer logo

--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -87,8 +87,8 @@
 }
 
 .pacx__header-content__people img {
-    width: 181.79px;
-    height: 38px;
+    width: 80%;
+    height: auto;
 }
 
 .pacx__header-content__people p {
